fix img tag styling issue causing map to be covered with horizontal gray bars

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,7 +29,7 @@ body {
   margin: 10px;
 }
 
-img {
+.studyImgs {
   max-width: 200px;
   max-height: 200px;
 }
